@@ -145,10 +145,12 @@ cong_ui_new_document_from_imported_xml(xmlDocPtr xml_doc,
 
 xmlDocPtr cong_ui_transform_doc(CongDocument *doc,
 				const gchar *stylesheet_filename,
+				GList *list_of_parameters,
 				GtkWindow *toplevel_window);
 
 void cong_ui_transform_doc_to_uri(CongDocument *doc,
 				  const gchar *stylesheet_filename,
+				  GList *list_of_parameters,
 				  const gchar *uri,
 				  GtkWindow *toplevel_window);
 
